tests/tests/snapshots/test__legacy_impls__legacy_impls.snap
---
source: tests/tests/legacy_impls.rs
expression: "Typescript::default().export(&Types::default().register::<LegacyImpls>(),\nspecta_serde::Format).unwrap()"
---
// This file has been generated by Specta. Do not edit this file manually.
export type Either<L, R> = ({ Left: L }) & { Right?: never } | ({ Right: R }) & { Left?: never };

export type ErrorStackContext = {
	context: string,
	attachments: string[],
	sources: ErrorStackContext[],
};

export type LegacyImpls = {
	ordered_f32: number | null,
	ordered_f64: number | null,
	heapless_vec: number[],
	semver: string,
	smol: string,
	array_vec: number[],
	array_string: string,
	smallvec: number[],
	toml_datetime: {
		v: string,
	},
	ulid: string,
	chrono_naive_datetime: string,
	chrono_naive_date: string,
	chrono_naive_time: string,
	chrono_duration: string,
	chrono_date: string,
	chrono_datetime: string,
	chrono_fixed_offset: string,
	chrono_utc: string,
	chrono_local: string,
	either: Either<number, string>,
	error_stack_report: Report,
	error_stack_multi_report: Report,
	glam_affine2: [(number | null), (number | null), (number | null), (number | null), (number | null), (number | null)],
	glam_affine3a: [(number | null), (number | null), (number | null), (number | null), (number | null), (number | null), (number | null), (number | null), (number | null), (number | null), (number | null), (number | null)],
	glam_mat2: [(number | null), (number | null), (number | null), (number | null)],
	glam_mat3: [(number | null), (number | null), (number | null), (number | null), (number | null), (number | null), (number | null), (number | null), (number | null)],
	glam_mat3a: [(number | null), (number | null), (number | null), (number | null), (number | null), (number | null), (number | null), (number | null), (number | null)],
	glam_mat4: [(number | null), (number | null), (number | null), (number | null), (number | null), (number | null), (number | null), (number | null), (number | null), (number | null), (number | null), (number | null), (number | null), (number | null), (number | null), (number | null)],
	glam_quat: [(number | null), (number | null), (number | null), (number | null)],
	glam_vec2: [(number | null), (number | null)],
	glam_vec3: [(number | null), (number | null), (number | null)],
	glam_vec3a: [(number | null), (number | null), (number | null)],
	glam_vec4: [(number | null), (number | null), (number | null), (number | null)],
	glam_daffine2: [(number | null), (number | null), (number | null), (number | null), (number | null), (number | null)],
	glam_daffine3: [(number | null), (number | null), (number | null), (number | null), (number | null), (number | null), (number | null), (number | null), (number | null), (number | null), (number | null), (number | null)],
	glam_dmat2: [(number | null), (number | null), (number | null), (number | null)],
	glam_dmat3: [(number | null), (number | null), (number | null), (number | null), (number | null), (number | null), (number | null), (number | null), (number | null)],
	glam_dmat4: [(number | null), (number | null), (number | null), (number | null), (number | null), (number | null), (number | null), (number | null), (number | null), (number | null), (number | null), (number | null), (number | null), (number | null), (number | null), (number | null)],
	glam_dquat: [(number | null), (number | null), (number | null), (number | null)],
	glam_dvec2: [(number | null), (number | null)],
	glam_dvec3: [(number | null), (number | null), (number | null)],
	glam_dvec4: [(number | null), (number | null), (number | null), (number | null)],
	glam_i8vec2: [number, number],
	glam_i8vec3: [number, number, number],
	glam_i8vec4: [number, number, number, number],
	glam_u8vec2: [number, number],
	glam_u8vec3: [number, number, number],
	glam_u8vec4: [number, number, number, number],
	glam_i16vec2: [number, number],
	glam_i16vec3: [number, number, number],
	glam_i16vec4: [number, number, number, number],
	glam_u16vec2: [number, number],
	glam_u16vec3: [number, number, number],
	glam_u16vec4: [number, number, number, number],
	glam_ivec2: [number, number],
	glam_ivec3: [number, number, number],
	glam_ivec4: [number, number, number, number],
	glam_uvec2: [number, number],
	glam_uvec3: [number, number, number],
	glam_uvec4: [number, number, number, number],
	glam_bvec2: [boolean, boolean],
	glam_bvec3: [boolean, boolean, boolean],
	glam_bvec4: [boolean, boolean, boolean, boolean],
};

export type Report = ErrorStackContext[];
