tests/tests/snapshots/test__legacy_impls__serde_json_number_exports_as_number.snap
---
source: tests/tests/legacy_impls.rs
expression: "Typescript::default().export(&Types::default().register::<HasJsonNumber>(),\nspecta_serde::Format).unwrap()"
---
// This file has been generated by Specta. Do not edit this file manually.
export type HasJsonNumber = {
	n: number | null,
};
