tests/tests/snapshots/test__legacy_impls__serde_json_number_uses_untagged_wire_shape.snap
---
source: tests/tests/legacy_impls.rs
expression: "Typescript::default().export(&types, specta_serde::Format).unwrap()"
---
// This file has been generated by Specta. Do not edit this file manually.
export type HasJsonNumber = {
	value: number | null | number,
};
