tests/tests/snapshots/test__legacy_impls__serde_json_value_does_not_recurse_when_exported.snap
---
source: tests/tests/legacy_impls.rs
expression: "Typescript::default().export(&types,\nspecta_serde::Format).expect(\"serde_json::Value should export without inline recursion\")"
---
// This file has been generated by Specta. Do not edit this file manually.
export type CoapBody = { type: "Json"; data: Value } | { type: "Bytes"; data: number[] } | { type: "Empty" };

export type Value = "Null" | ({ Bool: boolean }) & { Array?: never; Number?: never; Object?: never; String?: never } | ({ Number: ({ f64: number | null }) & { i64?: never; u64?: never } | ({ i64: number | null }) & { f64?: never; u64?: never } | ({ u64: number | null }) & { f64?: never; i64?: never } }) & { Array?: never; Bool?: never; Object?: never; String?: never } | ({ String: string }) & { Array?: never; Bool?: never; Number?: never; Object?: never } | ({ Array: Value[] }) & { Bool?: never; Number?: never; Object?: never; String?: never } | ({ Object: { [key in string]: Value } }) & { Array?: never; Bool?: never; Number?: never; String?: never };
