tests/tests/snapshots/test__legacy_impls__serde_json_value_exports_from_enum_variant.snap
---
source: tests/tests/legacy_impls.rs
expression: "Typescript::default().export(&types, specta_serde::Format).unwrap()"
---
// This file has been generated by Specta. Do not edit this file manually.
export type SerdeJsonValueEnum = { type: "Json"; data: Value } | { type: "Bytes"; data: number[] } | { type: "Empty" };

export type Value = "Null" | ({ Bool: boolean }) & { Array?: never; Number?: never; Object?: never; String?: never } | ({ Number: ({ f64: number | null }) & { i64?: never; u64?: never } | ({ i64: bigint }) & { f64?: never; u64?: never } | ({ u64: bigint }) & { f64?: never; i64?: never } }) & { Array?: never; Bool?: never; Object?: never; String?: never } | ({ String: string }) & { Array?: never; Bool?: never; Number?: never; Object?: never } | ({ Array: Value[] }) & { Bool?: never; Number?: never; Object?: never; String?: never } | ({ Object: { [key in string]: Value } }) & { Array?: never; Bool?: never; Number?: never; String?: never };
