tests/tests/snapshots/test__legacy_impls__serde_json_value_payload.snap
---
source: tests/tests/legacy_impls.rs
assertion_line: 158
expression: exported
---
// This file has been generated by Specta. Do not edit this file manually.
export type SerdeJsonValuePayload = {
	payload: Value,
};

export type Value = "Null" | ({ Bool: boolean }) & { Array?: never; Number?: never; Object?: never; String?: never } | ({ Number: number | null }) & { Array?: never; Bool?: never; Object?: never; String?: never } | ({ String: string }) & { Array?: never; Bool?: never; Number?: never; Object?: never } | ({ Array: Value[] }) & { Bool?: never; Number?: never; Object?: never; String?: never } | ({ Object: { [key in string]: Value } }) & { Array?: never; Bool?: never; Number?: never; String?: never };
